# cv-research-radar

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/rules/: cv-radar.rules
.github/workflows/: daily-radar.yml
config/: interests.yaml  ranking.yaml  sources.yaml
prompts/: daily_codex_review.md
src/cv_radar/: __init__.py  __main__.py  cli.py  config.py  http.py  manual_review.py  models.py  pdf_reporting.py  pipeline.py  ranking.py  reporting.py  state.py
src/cv_radar/analysis/: __init__.py  keyword.py  llm.py
src/cv_radar/processing/: __init__.py  dedupe.py  filtering.py
src/cv_radar/sources/: __init__.py  arxiv.py  base.py  rss.py  semantic_scholar.py
state/: runs.jsonl  seen_items.jsonl
tests/: test_analysis_ranking.py  test_cli.py  test_config.py  test_manual_review.py  test_pipeline.py  test_processing.py  test_reporting.py  test_sources.py
tests/fixtures/: arxiv_atom.xml  atom.xml  rss.xml  semantic_scholar.json
