[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cv-research-radar"
version = "0.1.0"
description = "Daily computer-vision research radar for papers, feeds, and code signals."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "cv-research-radar contributors" }]
dependencies = [
  "feedparser>=6.0.11,<7",
  "httpx>=0.27,<1",
  "openai>=1.66,<3",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0.2,<7",
  "rapidfuzz>=3.9,<4",
  "reportlab>=4.2,<5",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "pypdf>=5,<7",
]

[project.scripts]
cv-radar = "cv_radar.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["cv_radar"]
